--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Simon game</title>
+    <title></title>
 </head>
 <body>
-    
+    <!-- elemento che mostra i 5 numeri -->
+    <div id="numeri"></div>
 
+    <!-- elemento che mostra il timer di 30 secondi -->
+    <div id="timer"></div>
+    <div id="richiesti"></div>
+    <div id="risultato"></div>
+    <div id="punti"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
