--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <title>finito</title>
 </head>
 <body>
     <!-- elemento che mostra i 5 numeri -->
